fix: fixes navbar layout issues

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,24 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.nav-link {
+    position: relative;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: var(--color-indigo-500);
+    transform: scale(0);
+    transform-origin: center center;
+    transition: all .3s ease;
+}
+
+.nav-link:hover::after {
+    transform: scale(100%);
+}
